navbar spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ img {
 
 /* Increase the height of the nav bar */
 .navbar-brand {
+    margin-right: 10px;
     height: 100px;
 }
 
@@ -107,8 +108,8 @@ img {
     text-align: center;
     font-size: 20px;
     font-weight: bold;
-    padding-left: 20px!important;
-    padding-right: 20px!important;
+    padding-left: 11px!important;
+    padding-right: 11px!important;
 }
 
 /* Invert button colors on hover */
